perbaikan font warna

--- a/style.css
+++ b/style.css
@@ -130,7 +130,7 @@ section .title::after {
 }
 
 .navbar.sticky .logo a span {
-    color: #fff;
+    color: #000;
 }
 
 .navbar .menu li {
@@ -152,7 +152,7 @@ section .title::after {
 }
 
 .navbar.sticky .menu li a:hover {
-    color: #fff;
+    color: #000;
 }
 
 
